  * Packaging changes:
    + debian/control, README, conf.default.in: Remove references to linda
    + Add a NEWS file to alert dget users to the change in 2.10.17 to unpack
      source packages by default (Closes: #470809)
  * grep-excuses: Fix reference to bjorn.haxx.se in help output to refer to
    release.d.o/migration
  * debpkg: Fix reference to dpkg(8) in the manpage

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Sat, 01 Mar 2008 11:42:02 +0000

devscripts (2.10.18.1) unstable; urgency=low

  The "I need a bigger brown paper bag" upload

  * checkbashsisms: Simplify the >&/&>file check and in the process fix
    another couple of potential false positives.

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Fri, 29 Feb 2008 08:55:16 +0000

devscripts (2.10.18) unstable; urgency=low

  [ Patrick Schoenfeld ]
  * licensecheck: Detect a less common form of GPL usage

  [ Adam D. Barratt ]
  * checkbashisms: Fix a couple of brown paper bag issues with the >&file
    and herestring checks added in the last release. Thanks to Raphael
    Geissert for spotting the breakage so quickly.
  * debchange: Fix an off-by-one in the fix for #452806 that caused an
    extra blank line to be added before the trailer line

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Fri, 29 Feb 2008 06:50:51 +0000

devscripts (2.10.17) unstable; urgency=low

  The "Pia for DPL" upload

  [ Adam D. Barratt ]
  * checkbashisms:
    + Fix a false positive in the $(( test (Closes: #465364)
    + Add detection for <<<, $(OS|MACH)TYPE, $HOST(TYPE|NAME), $EUID,
      $DIRSTACK, $SECONDS and /dev/(tcp|udp) (Closes: #465386)
    + Enhance heredoc detection to not trigger on <<<
  * Debbugs.pm: Update to match the current debbugs SOAP interface. Add
    status(), usertags(), versions() and versions_with_arch(),
    newest_bugs(), bug_log(), source_to_binary() and binary_to_source()
  * tagpending:
    + Rewrite in perl using Debbugs.pm