@@ -92,6 +92,8 @@ devscripts (2.10.19) UNRELEASED; urgency=low
   * grep-excuses: Fix reference to bjorn.haxx.se in help output to refer to
     release.d.o/migration
   * debpkg: Fix reference to dpkg(8) in the manpage
+  * pts-subscribe: Don't complain about mail and/or at not being available
+    if --help / --version were used
 
  -- Adam D. Barratt <adam@adam-barratt.org.uk>  Sat, 01 Mar 2008 11:42:02 +0000
 
